[package]
name = "driver"
version = "0.1.0"
authors = ["Sam Delmerico <svdelmerico@gmail.com>"]

[dependencies]
hyper           = "0.9.6"
mime            = "0.2.0"
rustc-serialize = "0.3.19"
itertools       = "0.4"
rust-crypto     = "^0.2"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.trie]
#git = "https://github.com/stnma7e/rust-trie"
path = "src/rust-trie"
