[package]
name = "driver"
version = "0.1.0"
authors = ["Sam Delmerico <svdelmerico@gmail.com>"]

[dependencies]
hyper           = "0.9.6"
mime            = "0.2.0"
itertools       = "0.4"
rust-crypto     = "^0.2"
fuse            = "0.2.7"
time            = "0.1.35"
libc            = "0.2.11"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.rustc-serialize]
git = "https://github.com/rust-lang-nursery/rustc-serialize"

[dependencies.uuid]
version = "0.2"
features = ["v4"]
